# lang1

./: .dockerignore  .gitignore  CMakeLists.txt  Doxyfile  README.md  app  architecture.txt  architecture_plan.txt  build.sh  clean.sh  dockerfile  issues.md  main.cpp  main.lang  project.sh  run.sh  shell.nix  std.lang  test.lang  todo.md
doc/lang/: modules.md
doc/project/: current_tasks.md  issues.md  roadmap.md  tasks.md  tasks_archive.md  tasks_current.md
docs/: readme.md
docs/api/: architecture.txt  architecture_overview.md  architecture_plan.txt  readme.md
docs/lang/: ideas_list.md  readme.md  stack_allocations.md  types_syntax.md
docs/project/: issues.md  readme.md  roadmap.md
docs/project/tasks/: archive.md  current.md  future.md  not_current.md
src/common/: CMakeLists.txt
src/common/include/common/: common.h
src/common/include/common/diagnostic/: diagnostic.h  diagnostic_builder.h
src/common/include/common/streams/: istream.h  ostream.h  stream.h
src/common/include/common/utils/: logger.h
src/common/src/diagnostic/: diagnostic_builder.cpp
src/common/src/streams/: istream.cpp  ostream.cpp  stream.cpp
src/common/src/utils/: logger.cpp
src/compiler/: CMakeLists.txt  main.cpp
src/compiler_app/: CMakeLists.txt  main.cpp
src/compiler_app/include/compiler/: cliparser.h  compiledriver.h
src/compiler_app/src/: cliparser.cpp  compiledriver.cpp  main.cpp
src/lang/: CMakeLists.txt
src/lang/include/: defs.h  keywords.h  stream.h  tokenizer.h  utils.h
src/lang/include/ast/: ast.h  expr.h  stmt.h  visitor.h
src/lang/include/lang/: common.h
src/lang/include/lang/ast/: ast.h  expr.h  stmt.h  visitor.h
src/lang/include/lang/common/: symbol_path.h
src/lang/include/lang/common/compile/: options.h  program.h  state.h  unit.h
src/lang/include/lang/frontend/: keywords.h  lexer.h  parser.h  token.h
src/lang/include/lang/pipeline/: compile_options.h  compile_state.h  compiledriver.h  modules_loader.h  semantic_driver.h  syntax_driver.h
src/lang/include/lang/semantic/: identifier.h  module.h  program.h  scope.h  semantic_types.h  typesystem.h
src/lang/include/lang/semantic/analyzers/: import_analyzer.h  name_checker.h  semantic_initializer.h  symbols_collector.h
src/lang/include/lang/semantic/types/: identifier.h  module.h  program.h  scope.h  semantic_types.h  typesystem.h
src/lang/include/lang/syntax/: keywords.h  lexer.h  parser.h  syntax_container.h  token.h
src/lang/include/lang/utils/: ast_utils.h  diagnostic.h  diagnostic_builder.h  error.h  frontend_utils.h  istream.h  logger.h  ostream.h  printast.h  semantic_utils.h  stream.h  syntax_utils.h
src/lang/include/utils/: error.h  printast.h  utils.h
src/lang/src/: stream.cpp  tokenizer.cpp  utils.cpp
src/lang/src/ast/: ast.cpp  expr.cpp  stmt.cpp
src/lang/src/common/: units_manager.cpp
src/lang/src/frontend/: lexer.cpp  parser.cpp
src/lang/src/pipeline/: compiledriver.cpp  modules_loader.cpp  semantic_driver.cpp  syntax_driver.cpp
src/lang/src/semantic/: identifier.cpp  module.cpp  program.cpp  scope.cpp  semantic_initializer.cpp  typesystem.cpp
src/lang/src/semantic/analyzers/: import_processor.cpp  name_checker.cpp  semantic_initializer.cpp  symbols_collector.cpp
src/lang/src/semantic/types/: identifier.cpp  module.cpp  scope.cpp  semantic_initializer.cpp  semantic_types.cpp  typesystem.cpp
src/lang/src/syntax/: lexer.cpp  parser.cpp
src/lang/src/utils/: diagnostic.cpp  diagnostic_builder.cpp  error.cpp  istream.cpp  logger.cpp  ostream.cpp  printast.cpp  stream.cpp  utils.cpp
std/: std.lang
test_lib/: test_lib.lang
test_lib/sub_lib/: sub_lib.lang
